--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <div class="column col-center reveal">
         <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-          <h3 class="company-name">Intershala</h3>
+          <h3 class="company-name">Internshala</h3>
           <p class="work-role">Data Science Intern</p>
           <p class="location-years">Bengaluru, India | Aug 2022 - Dec 2022</p>
           <p class="work-summary">
