intershala to internshala

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <div class="column col-center reveal">
         <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-          <h3 class="company-name">Intershala</h3>
+          <h3 class="company-name">Internshala</h3>
           <p class="work-role">Data Science Intern</p>
           <p class="location-years">Bengaluru, India | Aug 2022 - Dec 2022</p>
           <p class="work-summary">
@@ -188,24 +188,6 @@
             </div>
               </div>
           </div>
-          <div class="row">
-            <div class="contact-form reveal">
-              <h3>Send Message</h3>
-              <div class="input-box">
-                <input type="text" name="" value="" placeholder="Name">
-              </div>
-              <div class="input-box">
-                <input type="text" name="" value="" placeholder="Email">
-              </div>
-              <div class="input-box">
-                <textarea name="name" rows="8" cols="80" placeholder="Message"></textarea>
-              </div>
-              <div class="input-box">
-                <input type="submit" class="send-btn" name="" value="Send">
-              </div>
-            </div>
-          </div>
-        </div>
       </section>
   
       <footer class="footer">
