--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
     <section class="main" id="main">
         <div class="content">
-            <h2 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>Dendi Surya Teja Reddy</span>
+            <h2 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>Surya Reddy Dendi</span>
             </h2>
             <div class="social-links" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
-              <a href="https://www.linkedin.com/in/dendi-surya-teja-reddy-6937b6213/" target="_blank">
+              <a href="http://linkedin.com/in/d-surya-reddy-7b186937b" target="_blank">
                   <i class="fab fa-linkedin"></i>
               </a>
               <a href="https://github.com/Suryareddydendi" target="_blank">
                   <i class="fab fa-github"></i>
               </a>
-              <a href="mailto:22suryareddy@gmail.com" target="_blank">
+              <a href="mailto:suryareddydendi03@gmail.com" target="_blank">
                   <i class="fas fa-envelope"></i>
               </a>
           </div>
@@ -41,9 +41,9 @@
         <div class="column col-center reveal">
             <h2 class="content-title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"></h2>
             <p class="paragraph-text" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                As a Master's graduate student in Computer Science at the University of the Pacific concentrating in machine learning, I've built a solid foundation in data-driven problem solving and predictive modeling. I also have a bachelor's degree in computer science from AMC Engineering College in Bangalore. Throughout my academic career, I've worked on a variety of topics, including predictive analytics, sentiment analysis, and complicated data mining architectures, leveraging both supervised and unsupervised learning methods.
+                Detail-oriented .NET Full Stack Developer with over 3 years of experience designing and delivering secure, scalable, and high-performance web applications. Proficient in .NET Core, C#, Angular, and SQL Server, with strong expertise in RESTful API development, microservices architecture, and cloud-native solutions.
                 <br><br>
-                I've used machine learning frameworks like Random Forest, Gradient Boosting, and SVM to solve real-world issues, with impressive outcomes like 84% accuracy in loan refinancing prediction and precision of 95% in autism diagnostic models. With familiarity on cloud platforms such as AWS and competence in Python, TensorFlow, and Scikit-learn, I am excited about using my talents to drive technological advancement and build effective machine learning solutions.
+                During my Masters in Computer Science, I worked on multiple real-world academic and industry-collaborated projects focused on full-stack development, cloud platforms (Azure), and automation pipelines, further strengthening my technical and problem-solving skills.Experienced in Agile methodologies and skilled in implementing CI/CD pipelines using tools like Azure DevOps and GitHub Actions to streamline software delivery and ensure code quality. Passionate about clean code, scalable system design, and continuous learning in emerging Microsoft technologies.
             </p>
         </div>
     </div>
@@ -58,11 +58,11 @@
         <div class="content">
             <div class="column col-center reveal">
                 <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300">
-                     <span> • Languages & Frameworks: Python, C# JavaScript (React, Node.js, Express.js, Next.js), TypeScript, Java, C++, R, HTML, CSS, Flask, Pytest, Jenkins, Tensorflow, PyTorch</span><br><br>
+                     <span> • Languages & Frameworks: C#,.NET6/7,ASP.NET MVC,JavaScript (React, Node.js, Express.js, Next.js), TypeScript, Java, C++, HTML, CSS, Flask, Azure, Tensorflow, PyTorch,.NET Core/Framework, Angular, Entity Framework 6, LINQ, WCF, MVC, Microservices, ADO.NET, RESTful APIs,</span><br><br>
 
-                     <span> • Data Visualization & Data Engineering: Tableau, Power BI, Grafana, Data Modeling, Snowflake</span><br><br>
+                     <span> • DevOps Tools: Azure DevOps, GitHub Actions, Docker, Kubernetes, Terraform, Jenkins</span><br><br>
 
-                     <span> • Databases & Cloud Service: MySQL, PostgreSQL, MongoDB, AWS (S3, EC3, RDS), Docker </span><br><br>
+                     <span> • Databases & Cloud Service: Microsoft SQL Server, PostgreSQL, MongoDB, AWS (S3, EC3, RDS), Docker </span><br><br>
 
                      <span> • Dev Tools & Practices: Pandas, NumPy, Matplotlib, scikit-learn, Jupyter, Git, Github </span><br><br>
 
@@ -73,7 +73,7 @@
 
     <section class="services" id="services">
       <div class="title">
-          <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Projects</h2>
+          <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Academic Projects</h2>
       </div>
       <div class="content">
           <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
@@ -131,21 +131,32 @@
       <div class="column col-center reveal">
         <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
           <h3 class="company-name">iPowersoft</h3>
-          <p class="work-role">Associate Software Engineer</p>
+          <p class="work-role">Software Developer</p>
           <p class="location-years">Oakland, CA | Feb 2025 - Present</p>
           <p class="work-summary">
-            At IPowersoft, an efficient Python code was developed for application enhancement while adhering to best practices.Software issues were resolved that improved system stability by 95% and participated in peer code reviews that boosted code performance by 20%. By implementing transformer-based models with TensorFlow and PyTorch, the LLM reasoning increased by 25% accuracy. Additionally, monitoring tools where integrated (Prometheus, Grafana), logging systems (ELK Stack), and testing frameworks (pytest, Jenkins), which enhanced backend machine learning service stability and efficiency by 30%.
+            I design and develop enterprise-scale, cloud-native applications using .NET 6/7, C#, ASP.NET Core, and Angular, with a strong focus on scalability, security, and performance. I contributed to building SelfNeuron, a GenAI-powered document summarization platform that extracts insights from multi-format uploads (PDF, DOCX, TXT, images), by designing an ASP.NET Core Web API–based microservices architecture covering secure file ingestion, document parsing, preprocessing, LLM-based inference, and response delivery. I implemented asynchronous processing, background workers, and optimized prompt strategies to efficiently handle large documents and concurrent workloads. I enhanced backend performance using Entity Framework Core, SQL Server tuning, and caching, containerized services using Docker, orchestrated deployments with Kubernetes, integrated Azure Monitor and Application Insights for observability, and automated deployments through CI/CD pipelines using Azure DevOps and GitHub Actions.
           </p>
         </div>
       </div>
 
       <div class="column col-center reveal">
         <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-          <h3 class="company-name">Internshala</h3>
-          <p class="work-role">Data Science Intern</p>
-          <p class="location-years">Bengaluru, India | Aug 2022 - Dec 2022</p>
+          <h3 class="company-name">L&T Technologies</h3>
+          <p class="work-role">Full Stack Developer</p>
+          <p class="location-years">Bengaluru, India | Jun 2021 - Dec 2022</p>
           <p class="work-summary">
-            At Internshala, Leveraged supervised learning to analyze complex datasets for a predictive bike-sharing demand model. Through feature engineering and regression techniques, achieved 85% accuracy in estimating rental demand based on weather, time, and location factors. Developed data mining frameworks that revealed rental trends and consumption patterns, while implementing Linear Regression that reduced mean squared error by 20%. Applied unsupervised learning to strategically segment clients and optimize bike availability, resulting in a 15% improvement in system performance and operational efficiency.
+            I worked on an Enterprise Workflow Automation &amp; Operations Platform designed to digitize and streamline internal business processes such as approvals, service requests, and operational reporting across multiple departments. I developed and maintained full-stack applications using .NET Core, C#, and Angular, transforming manual and email-driven workflows into secure, role-based web applications. I designed and implemented RESTful APIs and adopted a microservices architecture to decouple business modules including user management, workflow orchestration, notifications, and reporting, which improved system scalability, modularity, and ease of maintenance. I managed cloud deployments on Microsoft Azure, utilizing Azure App Services for web hosting, Azure Functions for background and event-driven processing, and Azure SQL Database for transactional data storage, ensuring high availability, fault tolerance, and secure data handling. Working in an Agile environment, I participated in sprint ceremonies, conducted code reviews, implemented unit tests using xUnit and NUnit, and optimized backend performance through Entity Framework Core enhancements and advanced SQL tuning.
+          </p>
+        </div>
+      </div>
+
+      <div class="column col-center reveal">
+        <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+          <h3 class="company-name">Hexaware Technologies</h3>
+          <p class="work-role">Software Developer</p>
+          <p class="location-years">Bengaluru, India | Dec 2020 - May 2021</p>
+          <p class="work-summary">
+            I contributed to the Data Modernization &amp; Integration Platform, focused on migrating legacy systems to modern, scalable architectures while improving data accessibility and reporting capabilities. I developed and optimized backend services using .NET Core and C#, emphasizing performance, reliability, and scalability. I played a key role in legacy data migration initiatives, designing structured ETL workflows to move historical data from legacy systems into SQL Server and MongoDB, ensuring high data integrity and improved reporting accuracy. On the frontend, I built Single Page Applications (SPAs) using Angular to enhance usability and reduce UI-related issues. I implemented caching mechanisms within .NET applications to reduce peak-time server load and improve throughput, integrated RESTful APIs for communication between internal modules and third-party systems, and supported cloud deployments on AWS using EC2 and Lambda with Terraform-based infrastructure provisioning.
           </p>
         </div>
       </div>
@@ -183,7 +194,7 @@
               </div>
               <div class="info">
                 <h3>Email Address</h3>
-                <span>22suryareddy@gmail.com</span>
+                <span>suryareddydendi03@gmail.com</span>
               </div>
             </div>
               </div>
@@ -191,7 +202,7 @@
       </section>
   
       <footer class="footer">
-        <span class="footer-title">Surya Dendi</span>
+        <span class="footer-title">Surya Reddy Dendi</span>
         <p>Copyright @2025 </a>. All Rights Reserved.</p>
       </footer>
 
