--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="main" id="main">
         <div class="content">
-            <h2 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>Surya Reddy Dendi</span>
+            <h2 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>Surya Teja Reddy Dendi</span>
             </h2>
             <div class="social-links" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
               <a href="http://linkedin.com/in/d-surya-reddy-7b186937b" target="_blank">
@@ -41,9 +41,11 @@
         <div class="column col-center reveal">
             <h2 class="content-title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"></h2>
             <p class="paragraph-text" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
-                Detail-oriented .NET Full Stack Developer with over 3 years of experience designing and delivering secure, scalable, and high-performance web applications. Proficient in .NET Core, C#, Angular, and SQL Server, with strong expertise in RESTful API development, microservices architecture, and cloud-native solutions.
+                I am a Full Stack .NET Developer with over 5 years of professional experience building enterprise-scale, cloud-native applications using C#, .NET Core (6/7), ASP.NET Core, Angular, and SQL Server. I specialize in designing secure, scalable backend services, modern web applications, and API-driven systems that support real-world business workflows.
                 <br><br>
-                During my Masters in Computer Science, I worked on multiple real-world academic and industry-collaborated projects focused on full-stack development, cloud platforms (Azure), and automation pipelines, further strengthening my technical and problem-solving skills.Experienced in Agile methodologies and skilled in implementing CI/CD pipelines using tools like Azure DevOps and GitHub Actions to streamline software delivery and ensure code quality. Passionate about clean code, scalable system design, and continuous learning in emerging Microsoft technologies.
+                I am passionate about clean architecture, backend engineering, and cloud platforms, with hands-on experience integrating GenAI capabilities into production systems. My work includes building AI-powered features such as document ingestion, preprocessing, summarization, and insight extraction using LLM-based APIs, along with implementing secure file handling, asynchronous processing, and scalable cloud-native deployments.
+                <br><br>
+                I enjoy working on end-to-end solutions, modernizing legacy applications, and collaborating with cross-functional teams to deliver high-impact software products that combine traditional enterprise engineering with modern AI-driven innovation.
             </p>
         </div>
     </div>
@@ -58,13 +60,25 @@
         <div class="content">
             <div class="column col-center reveal">
                 <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300">
-                     <span> • Languages & Frameworks: C#,.NET6/7,ASP.NET MVC,JavaScript (React, Node.js, Express.js, Next.js), TypeScript, Java, C++, HTML, CSS, Flask, Azure, Tensorflow, PyTorch,.NET Core/Framework, Angular, Entity Framework 6, LINQ, WCF, MVC, Microservices, ADO.NET, RESTful APIs,</span><br><br>
+                     <span> • Programming Languages: C#, .NET 6/7, ASP.NET MVC, ASP.NET Core, Java, Python</span><br><br>
 
-                     <span> • DevOps Tools: Azure DevOps, GitHub Actions, Docker, Kubernetes, Terraform, Jenkins</span><br><br>
+                     <span> • Frameworks & Libraries: .NET Core/Framework, Angular, Entity Framework Core, LINQ, WCF, MVC, Microservices, ADO.NET</span><br><br>
 
-                     <span> • Databases & Cloud Service: Microsoft SQL Server, MySQL, PostgreSQL, MongoDB, AWS (S3, EC2, RDS), Docker </span><br><br>
+                     <span> • AI/ML & GenAI: LLM API Integration (OpenAI, Anthropic), Prompt Engineering, RAG (Retrieval-Augmented Generation), Document Processing, Multi-format Data Extraction, GenAI Application Development, LLM-based Inference</span><br><br>
 
-                     <span> • Dev Tools & Practices: Pandas, NumPy, Matplotlib, scikit-learn, Jupyter, Git, Github </span><br><br>
+                     <span> • DevOps & Tools: Azure DevOps, GitHub Actions, Docker, Kubernetes, Terraform, Jenkins, Git, JIRA</span><br><br>
+
+                     <span> • Cloud Technologies: Microsoft Azure (App Services, Azure Functions, Azure SQL, Blob Storage, Azure Monitor, Application Insights), AWS (EC2, S3, Lambda)</span><br><br>
+
+                     <span> • Web Technologies: HTML5, CSS3, JavaScript, TypeScript, Bootstrap, jQuery, Ajax, JSON, XML, RESTful APIs</span><br><br>
+
+                     <span> • Databases: Microsoft SQL Server, MySQL, MongoDB, SQLite, Azure SQL Database</span><br><br>
+
+                     <span> • Development Tools: Visual Studio, Visual Studio Code, SQL Server Management Studio, Postman, Fiddler, Swagger</span><br><br>
+
+                     <span> • Testing Frameworks: xUnit, NUnit, Moq, Selenium</span><br><br>
+
+                     <span> • Methodologies: Agile, Scrum, SDLC, Waterfall, Test-Driven Development (TDD), CI/CD</span><br><br>
 
                      </div>
     </section>
@@ -132,9 +146,34 @@
         <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
           <h3 class="company-name">iPowersoft</h3>
           <p class="work-role">Software Developer</p>
-          <p class="location-years">Oakland, CA | Feb 2025 - Present</p>
+          <p class="location-years">California| Feb 2025 - Present</p>
           <p class="work-summary">
-            I design and develop enterprise-scale, cloud-native applications using .NET 6/7, C#, ASP.NET Core, and Angular, with a strong focus on scalability, security, and performance. I contributed to building SelfNeuron, a GenAI-powered document summarization platform that extracts insights from multi-format uploads (PDF, DOCX, TXT, images), by designing an ASP.NET Core Web API–based microservices architecture covering secure file ingestion, document parsing, preprocessing, LLM-based inference, and response delivery. I implemented asynchronous processing, background workers, and optimized prompt strategies to efficiently handle large documents and concurrent workloads. I enhanced backend performance using Entity Framework Core, SQL Server tuning, and caching, containerized services using Docker, orchestrated deployments with Kubernetes, integrated Azure Monitor and Application Insights for observability, and automated deployments through CI/CD pipelines using Azure DevOps and GitHub Actions.
+            <strong>Project: Self Neuron (GenAI Product)</strong>
+            <br><br>
+            I design and develop enterprise-scale, cloud-native applications using .NET 6/7, C#, ASP.NET Core, and Angular, with a strong focus on scalability, security, and performance. 
+            <br><br>
+            I contributed to building SelfNeuron, a GenAI-powered product which acts as summarization platform that extracts insights from multi-format uploads (PDF, DOCX, TXT, images), by designing an ASP.NET Core Web API–based microservices architecture covering secure file ingestion, document parsing, preprocessing, LLM-based inference, and response delivery. 
+            <br><br>
+            I implemented asynchronous processing, background workers, and optimized prompt strategies to efficiently handle large documents and concurrent workloads. I enhanced backend performance using Entity Framework Core, SQL Server tuning, and caching, containerized services using Docker, orchestrated deployments with Kubernetes, integrated Azure Monitor and Application Insights for observability, and automated deployments through CI/CD pipelines using Azure DevOps and GitHub Actions.
+          </p>
+        </div>
+      </div>
+
+      <div class="column col-center reveal">
+        <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+          <h3 class="company-name">iPowersoft</h3>
+          <p class="work-role">Associate Software Engineer</p>
+          <p class="location-years">California | Mar 2024 - Dec 2024</p>
+          <p class="work-summary">
+            <strong>Project: Scalable Business Operations Platform</strong>
+            <br><br>
+            Developed and maintained enterprise-scale web applications using .NET Core 6/7 and Angular 15+, implementing responsive UI components that improved user engagement by 35% and reduced page load times by 48% through code-splitting and lazy loading techniques.
+            <br><br>
+            Designed and implemented 20+ RESTful API endpoints following OpenAPI specifications, achieving 99.5% API availability and serving an average of 50,000 requests per day with p95 response times under 200ms.
+            <br><br>
+            Deployed and managed applications on Azure cloud infrastructure utilizing Azure App Services for web hosting, Azure Functions for serverless computing, and Azure SQL Database for data persistence, reducing infrastructure costs by 30% through resource optimization.
+            <br><br>
+            Optimized database queries using Entity Framework Core with query optimization techniques, including proper indexing, eager loading, and projection, improving database response times by 52% and reducing N+1 query problems by 90%.
           </p>
         </div>
       </div>
@@ -145,7 +184,15 @@
           <p class="work-role">Full Stack Developer</p>
           <p class="location-years">Bengaluru, India | Jun 2021 - Dec 2022</p>
           <p class="work-summary">
-            I worked on an Enterprise Workflow Automation &amp; Operations Platform designed to digitize and streamline internal business processes such as approvals, service requests, and operational reporting across multiple departments. I developed and maintained full-stack applications using .NET Core, C#, and Angular, transforming manual and email-driven workflows into secure, role-based web applications. I designed and implemented RESTful APIs and adopted a microservices architecture to decouple business modules including user management, workflow orchestration, notifications, and reporting, which improved system scalability, modularity, and ease of maintenance. I managed cloud deployments on Microsoft Azure, utilizing Azure App Services for web hosting, Azure Functions for background and event-driven processing, and Azure SQL Database for transactional data storage, ensuring high availability, fault tolerance, and secure data handling. Working in an Agile environment, I participated in sprint ceremonies, conducted code reviews, implemented unit tests using xUnit and NUnit, and optimized backend performance through Entity Framework Core enhancements and advanced SQL tuning.
+            <strong>Project: Enterprise Workflow Automation & Operations Platform</strong>
+            <br><br>
+            I worked on an Enterprise Workflow Automation & Operations Platform designed to digitize and streamline internal business processes such as approvals, service requests, and operational reporting across multiple departments. I developed and maintained full-stack applications using .NET Core, C#, and Angular, transforming manual and email-driven workflows into secure, role-based web applications.
+            <br><br>
+            I designed and implemented RESTful APIs and adopted a microservices architecture to decouple business modules including user management, workflow orchestration, notifications, and reporting. This improved system scalability, modularity, and ease of maintenance while supporting future enhancements.
+            <br><br>
+            I managed cloud deployments on Microsoft Azure, utilizing Azure App Services for web hosting, Azure Functions for background and event-driven processing, and Azure SQL Database for transactional data storage. I ensured high availability, fault tolerance, and secure data handling across environments.
+            <br><br>
+            Working in an Agile environment, I actively participated in sprint ceremonies, conducted code reviews, and implemented unit tests using xUnit and NUnit. I optimized backend performance through Entity Framework Core enhancements and advanced SQL tuning, resulting in improved response times and system stability under concurrent workloads.
           </p>
         </div>
       </div>
@@ -154,9 +201,17 @@
         <div class="work-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
           <h3 class="company-name">Hexaware Technologies</h3>
           <p class="work-role">Software Developer</p>
-          <p class="location-years">Bengaluru, India | Dec 2020 - May 2021</p>
+          <p class="location-years">Bengaluru, India | Mar 2019 - May 2021</p>
           <p class="work-summary">
-            I contributed to the Data Modernization &amp; Integration Platform, focused on migrating legacy systems to modern, scalable architectures while improving data accessibility and reporting capabilities. I developed and optimized backend services using .NET Core and C#, emphasizing performance, reliability, and scalability. I played a key role in legacy data migration initiatives, designing structured ETL workflows to move historical data from legacy systems into SQL Server and MongoDB, ensuring high data integrity and improved reporting accuracy. On the frontend, I built Single Page Applications (SPAs) using Angular to enhance usability and reduce UI-related issues. I implemented caching mechanisms within .NET applications to reduce peak-time server load and improve throughput, integrated RESTful APIs for communication between internal modules and third-party systems, and supported cloud deployments on AWS using EC2 and Lambda with Terraform-based infrastructure provisioning.
+            <strong>Project: Data Modernization & Integration Platform</strong>
+            <br><br>
+            I contributed to the Data Modernization & Integration Platform, focused on migrating legacy systems to modern, scalable architectures while improving data accessibility and reporting capabilities. I developed and optimized backend services using .NET Core and C#, emphasizing performance, reliability, and scalability.
+            <br><br>
+            I played a key role in a legacy data migration initiative, designing structured ETL workflows to move historical data from legacy systems into SQL Server and MongoDB, ensuring high data integrity and improved reporting accuracy.
+            <br><br>
+            On the frontend, I built Single Page Applications (SPAs) using Angular, significantly enhancing usability and reducing UI-related issues. I implemented caching mechanisms within .NET applications to reduce peak-time server load and improve throughput.
+            <br><br>
+            I worked with ASP.NET MVC and WCF services, integrating RESTful APIs to enable communication between internal modules and third-party systems. I also supported cloud deployments on AWS, using EC2 and Lambda, and participated in Terraform-based infrastructure provisioning, accelerating deployment cycles and improving environment consistency.
           </p>
         </div>
       </div>
@@ -176,7 +231,7 @@
               </div>
               <div class="info">
                 <h3>Address</h3>
-                <span>1700 North 1st street, SanJose, California 95112</span>
+                <span>1775 Milmont Dr, Milpitas, California 95035</span>
               </div>
             </div>
             <div class="card reveal">
@@ -202,7 +257,7 @@
       </section>
   
       <footer class="footer">
-        <span class="footer-title">Surya Reddy Dendi</span>
+        <span class="footer-title">Surya Teja Reddy Dendi</span>
         <p>Copyright @2025 </a>. All Rights Reserved.</p>
       </footer>
 
